docker/tibco-spotfire/k8s/spotfire-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: spotfire
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/spotfire: "true"
  podSelector:
    matchLabels:
      io.kompose.network/spotfire: "true"
